add planting in menu and add plantingexception